# food-inventory-sim-tool

./: .project.gf  Cargo.toml  README.md
configs/: basic.ron  basic_search.ron  minimal.ron
configs/basic/: print_calls.ron  run.ron  search.ron
src/: config.rs  main.rs  minimize.rs  types.rs  xs.rs
